2000-02-10  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* configure: Rebuilt.

2000-02-09  Bruce Korb  <bkorb@gnu.org>

	* gcc/fixincludes:  ** DELETED **
	* gcc/fixcpp:  ** DELETED **
	* gcc/fixinc-nt.sed:  ** DELETED **
	* gcc/just-fixinc:  ** DELETED **
	* gcc/Makefile.in:  Removed out-dated commentary
	* gcc/configure.in: Removed fast-fixincludes disablement.
	* MAINTAINERS(Ian Taylor) moved to "Write after approval" group.

2000-02-09  Clinton Popetz  <cpopetz@cygnus.com>
	* function.c (thread_prologue_and_epilogue_insns): Uncomment
	last change.

2000-02-09  Richard Henderson  <rth@cygnus.com>

	* jump.c (delete_insn): Don't delete user labels at -O0.

2000-02-09  Robert Lipe  <robertl@sco.com>

	* Makefile.in (gen-protos): Don't depend on HOST_LIBDEPS.
	Don't link with HOST_LIBS. 

2000-02-09  Zack Weinberg  <zack@wolery.cumb.org>

	* configure.in: Correct --help text for --with-dwarf2.
	Put tm-dwarf2.h after other tm files, if it's requested.
	* configure: Regenerate.
	* config/tm-dwarf2.h: #undef PREFERRED_DEBUGGING_TYPE before
	defining it.

2000-02-09  Zack Weinberg  <zack@wolery.cumb.org>

	* cpplib.h: Provide HASHNODE typedef and forward decl of
	struct hashnode only.  Kill cpp_hashnode typedef.  MACRODEF,
	DEFINITION, struct hashnode, struct macrodef, struct
	definition, scan_decls prototype, default defn of
	INCLUDE_LEN_FUDGE moved elsewhere.

	* cpphash.h: MACRODEF, DEFINITION, struct macrodef, struct
	definition, and struct hashnode moved here. Remove the unused
	'predefined' field from struct definition.  Replace the 'args'
	union with its sole member.  All users updated (cpphash.c).
	Delete HASHSTEP and MAKE_POS macros, and hashf prototype.  Add
	multiple include guard.

	* cpphash.c (hashf): Make static; use better algorithm; drop
	HASHSIZE parameter; return an unsigned int.
	(cpp_lookup): Drop HASH parameter.  PFILE parameter is
	used. Calculate HASHSIZE modulus here.
	(cpp_install): Drop HASH parameter. Calculate HASHSIZE modulus
	here.